agregando react routing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>MusiShop</title>
     <link href="/dist/output.css" rel="stylesheet" />
   </head>
-  <body>
+  <body class="no-scrollbar">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
