--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MusiShop</title>
     <link href="/dist/output.css" rel="stylesheet" />
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="no-scrollbar">
+  <body>
     <div id="root"></div>
+    <!-- Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, dignissimos doloribus. Repellendus, debitis? Quidem tempora nesciunt fuga illum exercitationem officia autem, ad quibusdam asperiores quasi sunt assumenda! Sunt, eaque repellat. -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
