--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="#" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MusiShop</title>
-    <link href="/dist/output.css" rel="stylesheet" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="src/output.css" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
-    <!-- Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, dignissimos doloribus. Repellendus, debitis? Quidem tempora nesciunt fuga illum exercitationem officia autem, ad quibusdam asperiores quasi sunt assumenda! Sunt, eaque repellat. -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
