--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="#" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MusiShop</title>
-    <link href="src/output.css" rel="stylesheet" />
+    <!-- <link href="src/css/output.css" rel="stylesheet" /> -->
   </head>
   <body>
     <div id="root"></div>
